--- a/genesis-master/style.css
+++ b/genesis-master/style.css
@@ -19,8 +19,8 @@ body {
     border: 1px solid #ffffff;
     background-color: #ffffff;
     border-radius: 100%;
-    width: 700px;
-    height: 700px;
+    width: 95vh;
+    height: 95vh;
 }
 
 .blue {
